mobile spacing issues

--- a/src/sass/partials/_player.scss
+++ b/src/sass/partials/_player.scss
@@ -169,7 +169,7 @@
     margin: 0;
     font-family: 'Guardian Egyptian Web';
     font-weight: 700;
-    margin-left: 70px;
+    margin-left: 60px;
 
     @include mq(phablet) {
         margin-left: 0;
